--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,13 @@
 <p>
   header works!
 </p>
+<nav>
+  <ul>
+    <li>
+      <a [routerLink]="[ '/home' ]">Home</a>
+    </li>
+    <li>
+      <a [routerLink]="[ '/productDetail' ]">Product Details</a>
+    </li>
+  </ul>
+</nav>
