Routing with params

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   home-page works!
 </p>
 <ul>
-  <li *ngFor="let product of products">
+  <li *ngFor="let product of products" (click)="navigate(product)">
     {{product.name}}
   </li>
 </ul>
