--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-forms></app-forms>
 <app-footer></app-footer>
